Adding complements to the falco deployments
gives a nice extensive test

--- a/values-with-ui.yaml
+++ b/values-with-ui.yaml
@@ -6,3 +6,9 @@ falco:
     nodePort: 32765
 auditLog:
   enabled: true
+falcosidekick:
+  enabled: true
+  webui:
+    enabled: true
+    service:
+      type: NodePort
